--- a/app/src/main/res/layout/activity_konsultasi.xml
+++ b/app/src/main/res/layout/activity_konsultasi.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,30 +8,41 @@
     android:padding="16dp"
     tools:context=".KonsultasiActivity">
 
-    <EditText
-        android:id="@+id/editTextNama"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/Nama" />
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:inputType="textEmailAddress"
-        android:hint="@string/Email" />
-
-    <DatePicker
-        android:id="@+id/datePicker"
+    <TextView
+        android:id="@+id/tanggalTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:calendarViewShown="false" />
+        android:text="Pilih Tanggal"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="16dp"/>
 
     <Button
-        android:id="@+id/buttonSubmit"
+        android:id="@+id/pilihTanggalButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Pilih Tanggal" />
+
+    <EditText
+        android:id="@+id/namaEditText"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="Nama"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/jadwalkanButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Submit" />
+        android:text="Jadwalkan Konsultasi" />
 
 </LinearLayout>
